guides/v2.2/javascript-dev-guide/widgets/jquery-widgets-about.md
---
group: javascript-developer-guide
subgroup: 3_Widgets
title: Magento jQuery widgets
---

The Magento system uses a jQuery JavaScript library to implement client functionality. This includes a wide usage of standard, customized, and custom jQuery widgets.

This guide discusses the following widgets:

-   [Accordion widget]
-   [Alert widget]
-   [Breadcrumb widget]
-   [Calendar widget]
-   [Collapsible widget]
-   [Confirm widget]
-   [Dropdown widget]
-   [DropdownDialog widget]
-   [FolderTree widget]
-   [Gallery widget]
-   [List widget]
-   [Loader widget]
-   [MediaUploader widget]
-   [Menu widget]
-   [Modal widget]
-   [Multiselect widget]
-   [Navigation widget]
-   [PasswordStrengthIndicator widget]
-   [PopupWindow widget]
-   [Prompt widget]
-   [QuickSearch widget]
-   [RedirectUrl widget]
-   [RemainingCharacters widget]
-   [RowBuilder widget]
-   [Sortable widget]
-   [Sticky widget]
-   [Tabs widget]
-   [ToggleAdvanced widget]
-   [TrimInput widget]

{:.bs-callout .bs-callout-info}
Magento 2 supports [jQuery UI 1.9.2], widget options added in later versions might be unavailable.

{:.bs-callout .bs-callout-info}
Magento out of the box does not contain jQuery UI styles. Also, it is not recommended to download them as is, because it can break the default Magento design. To use certain jQuery UI styles, you need to add them manually in your custom stylesheets in the `{your_theme_dir}/web/css` or `{your_module_dir}/view/{area}/web/css` directory.

[Accordion widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_accordion.html
[Alert widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_alert.html
[Breadcrumb widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget-breadcrumbs.html
[Calendar widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_calendar.html
[Collapsible widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_collapsible.html
[Confirm widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_confirm.html
[Dropdown widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_dropdown.html
[DropdownDialog widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_dialog.html
[FolderTree widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget-folder-tree.html
[Gallery widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_gallery.html
[List widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_list.html
[Loader widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_loader.html
[MediaUploader widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget-media-uploader.html
[Menu widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_menu.html
[Modal widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_modal.html
[Multiselect widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget-multiselect.html
[Navigation widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_navigation.html
[PasswordStrengthIndicator widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_password_strength_indicator.html
[PopupWindow widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget-popup-window.html
[Prompt widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_prompt.html
[QuickSearch widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_quickSearch.html
[RedirectUrl widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_redirectUrl.html
[RemainingCharacters widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget-remaining-characters.html
[RowBuilder widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget-row-builder.html
[Sortable widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget-sortable.html
[Tabs widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_tabs.html
[ToggleAdvanced widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_toggle.html
[TrimInput widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget-trim-input.html
[jQuery UI 1.9.2]: http://blog.jqueryui.com/2012/11/jquery-ui-1-9-2/
[Sticky widget]: {{page.baseurl}}/javascript-dev-guide/widgets/widget_sticky.html
